@@ -1,4 +1,3 @@
-
                             Pygame Installation
 
    Python can be built from source, but the easiest way is to get a
